--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-    "name": "Node.js",
+    "name": "campground-booking",
     "version": "1.0.0",
-    "description": "A description of your app",
-    "main": "index.js",
+    "main": "server.js",
     "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js"  
+      "start": "node server.js"
     },
     "dependencies": {
-      "express": "^4.17.1"  
-    },
-    "devDependencies": {
-      "nodemon": "^2.0.7"  
+      "express": "^4.17.1",
+      "axios": "^0.21.1"
     },
     "engines": {
-      "node": "22.14.0"
-    },
-    "author": "Your Name",
-    "license": "MIT"
+      "node": "16.x"
+    }
   }
   
