--- a/vercel.json
+++ b/vercel.json
@@ -7,4 +7,13 @@
       }
     ]
   }
-  
+  {
+    "builds": [
+      {
+        "src": "package.json",
+        "use": "@vercel/node"
+      }
+    ],
+
+}
+     }
